--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">tpi</string>
+    <string name="app_name">Compartiendo el mundo</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="mis_experiencias">Mis Lugares Preferidos
 </string>
     <string name="Chats">Chats</string>
-    <string name="sin_cuenta">CNo tienes cuenta?</string>
+    <string name="sin_cuenta">¿No tienes cuenta?</string>
     <string name="Perfil">Perfil</string>
     <string name="titulo_perfil">Modifica tus Datos</string>
     <string name="Filtros">Filtros</string>
@@ -37,4 +37,5 @@
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
     <string name="back4app_app_id">aza5SthTqyxgDUruRcmvKINdxzroFUwVM2MdRDTf</string>
     <string name="back4app_client_key">um19Fl8kW30QF91Q02m2U1TgRbZ8qW3Iwh7IFw52</string>
+    <string name="btnini">INICIAR SESION</string>
 </resources>
